--- a/Practice 11.ipynb
+++ b/Practice 11.ipynb
@@ -29,7 +29,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Import Library Matplotlib \n",
+        "#Import Library Matplotlib Agung Ganteng\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n"
       ],
